# Ariadne

./: DEVELOPMENT_TODO.md  IMMEDIATE_TASKS.md  IMPLEMENTATION_TODO.md  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .env.example  main.py  pyproject.toml  test_plugin_discovery.py
backend/api/v1/research/: __init__.py  router.py
backend/api/v1/tapestries/: __init__.py  router.py
backend/api/v1/users/: __init__.py  router.py
backend/auth/: jwt_middleware.py  rate_limiter.py  rbac.py
backend/core/: config_fixed.py  config_simple.py  database.py  interfaces.py  registry.py
backend/models/: session.py  subscription.py  user.py
backend/plugins/learning_models/: __init__.py
backend/plugins/tools/: __init__.py  document_ingestion.py  web_search.py
backend/services/: auth_service.py  memory_service.py  muse_service.py  research_service.py  tapestry_service.py  user_service.py  workflow_service.py
docs/: ARCHITECTURE.md  CONSTITUTION.md  DEVELOPMENT_PLAN.md  PRD.md  USER_MANAGEMENT_STRATEGY.md
frontend/: .env.example  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: BackendTest.tsx  KnowledgeGraph.tsx  LandingPage.tsx  ResearchInterface.tsx
frontend/src/services/: api.ts
